--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-/sw.js
-*.json
-*.vscodegit push -f origin
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+manifest.json
+sw.js
