--- a/manifest.json
+++ b/manifest.json
@@ -39,6 +39,32 @@
       "src": "./app/assets/android/android-launchericon-48-48.png",
       "sizes": "48x48",
       "type": "image/png"
+    },
+    {
+      "src": "./app/assets/ios/16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },  {
+      "src": "./app/assets/ios/20.png",
+      "sizes": "20x20",
+      "type": "image/png"
+    },
+    {
+      "src": "./app/assets/ios/29.png",
+      "sizes": "29x29",
+      "type": "image/png"
+    },  {
+      "src": "./app/assets/ios/32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },  {
+      "src": "./app/assets/ios/192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },  {
+      "src": "./app/assets/ios/512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
